QXGEdit - Qt XG Editor
----------------------

ChangeLog


0.6.1  2019-12-22  The Winter'19 Release.

- Custom color (palette) theme editor introduced; color
  (palette) theme changes are now effective immediately,
  except on default.

- Second attempt to fix the yet non-official though
  CMake build configuration.

- When using autotools and ./configure --with-qt=...,
  it is also necessary to adjust the PKG_CONFIG_PATH
  environment variable (after a merge request by plcl
  aka. Pedro López-Cabanillas, while on qmidinet,
  thanks).


0.6.0  2019-10-17  An Autumn'19 Release.

- Added alternate yet non-official CMake build option.

- Fix HiDPI display screen effective support (Qt >= 5.6).

- Refactored all singleton/unique application instance
  setup logic away from X11/Xcb hackery.

- Make sure compiler flags comply to c++11 as standard.


0.5.5  2019-07-12  A Summer'19 Release.

- Updated for the newer Qt5 development tools (>= 5.13).

- Configure updated to check for qtchooser availability.

- Corrected display of note names on the lowest octave,
  as from "C -1" (0) through  "B -1" (11).

- Minor update to Debian packaging control file.


0.5.4  2019-04-11  A Spring-Break'19 Release.

- Re-defined all main application UNIX signal handling.


0.5.3  2019-03-11  Pre-LAC2019 Release Frenzy.

- HiDPI display screen support (Qt >= 5.6).

- Old deprecated Qt4 build support is no more.

- AppStream metadata updated to be the most compliant with
  latest freedesktop.org specification and recommendation.


0.5.2  2018-07-22  A Summer'18 Release.

- AppData/AppStream metadata is now settled under an all
  permisssive license (FSFAP).

- Corrected default handling of MULTIPART > Main > Control >
  Volume and also MULTIPART > Control > Pitch Bend > LFO ...

- Fixed for some g++ >= 8.1.1 warnings and quietness.


0.5.1  2018-05-21  Pre-LAC2018 release frenzy.

- Corrected wrong handling of the MULTIPART Detune parameter.
